# dailyflow

./: .env.example  .gitignore  .prettierignore  .prettierrc.js  README.md  commitlint.config.js  docker-compose.yml  eslint.config.js  jest.config.base.js  package.json  tsconfig.json
.github/workflows/: ci.yml  deploy-web.yml  docker.yml  pr-checks.yml
.husky/: commit-msg  pre-commit
apps/ai-service/: .env.example  Dockerfile  README.md  WORKER_IMPLEMENTATION.md  pyproject.toml
apps/ai-service/prisma/: schema.prisma
apps/ai-service/src/: __init__.py  main.py
apps/ai-service/src/application/: __init__.py  dtos.py  event_handlers.py  use_cases.py
apps/ai-service/src/domain/: __init__.py  anomaly_detector.py  insights_engine.py  receipt_processor.py  voice_processor.py
apps/ai-service/src/domain/events/: __init__.py
apps/ai-service/src/infrastructure/: __init__.py  config.py  event_publisher.py  openai_client.py
apps/ai-service/src/infrastructure/database/: __init__.py
apps/ai-service/src/infrastructure/http/: __init__.py  routes.py
apps/ai-service/src/infrastructure/redis/: __init__.py  event_consumer.py
apps/ai-service/src/infrastructure/workers/: __init__.py  insights_worker.py  ocr_worker.py  worker_pool.py
apps/ai-service/tests/: __init__.py  conftest.py
apps/ai-service/tests/integration/: test_events.py  test_routes.py
apps/ai-service/tests/unit/: test_domain.py
docs/: ARCHITECTURE.md  CICD.md  CODE-QUALITY.md  DOCKER.md  LOCAL-SETUP.md  MILESTONE-PHASE5PLUS-PHASE6.md  MILESTONE-PHASE6-COMPLETE.md  MILESTONE-SESSION-EXTENDED.md  PACKAGES.md  PHASE-4-SUMMARY.md  PHASE-5-SUMMARY.md  PROJECT-STATUS.md  SESSION-CHECKPOINT-PHASE5PLUS-PHASE6.md  SETUP.md  TESTING.md
(+110 files in other folders)
